2010-09-28  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by Kenneth Russell.

        [chromium] Keep the accelerated compositor around even after a page is
        done using it to avoid startup costs in pages that frequently switch
        the compositor on and off.
        https://bugs.webkit.org/show_bug.cgi?id=45845

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setIsAcceleratedCompositingActive):


Canonical link: https://commits.webkit.org/59270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68606 268f45cc-cd09-0410-ab3c-d52691b4dbfc